# PolyLib

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: polyLib.hpp
src/interpolate/: interpolate.hpp  lagrange.hpp  laplace.hpp  newton.hpp
src/pol/: formatPoly.hpp  main.cpp  poly.cpp  poly.hpp
tests/: test_main.cpp
